# vanya_functools

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml  ruff.yml
tests/: __init__.py  test_lazylock.py  test_stdlib_behaviour.py
vanya_functools/apoptosis/: README.md  __init__.py
vanya_functools/evenshorterhand/: README.md  __init__.py
vanya_functools/lazylock/: README.md  __init__.py
