[project]
name = "vanya-functools"
version = "0.1.0"
description = ""
authors = [
    {name = "feiyang",email = "feiyangc@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
